sort.dutchflag.DutchFlagAlgo.scala.error
Compilation error:
DutchFlagAlgo:25: error: not found: value i
    if (getCouleur(i)==BLEU){
                   ^DutchFlagAlgo:31: error: not found: value i
    else if(getCouleur(i)==BLANC){
                       ^